# docker_prac

./: Dockerfile  README.md  compose.yml  pyproject.toml
docker_prac/: main.py
